<resources>
    <string name="app_name">LearningApp</string>
    <string name="fill_this">Fill this</string>
    <string name="fragment_one">This is fragment one\nI send data to the fragment below</string>
    <string name="fragment_two">This is fragment two\nI send data to the fragment above</string>
    <string name="button_fun">Press me for the real fun</string>
    <string name="textview_enter_text_here">Enter text here</string>
    <string name="textview_fillout">Please complete the below fields:</string>
    <string name="first_name">Enter First Name:</string>
    <string name="last_name">Enter Last Name:</string>
    <string name="age">Enter Your Age:</string>
    <string name="fragment_data_movement">Fragment Data Movement</string>
    <string name="archived_label">Archive</string>
    <string name="undo_label">Undo</string>

    <!--  Button labels  -->
    <string name="data_charts">Data Charts</string>
    <string name="recycler_view">Recycler View</string>
    <string name="basic_activity">Basic Activity</string>
    <string name="network_test">Network Test</string>
    <string name="kiosk_button">Kiosk Sample Activity</string>
    <string name="bluetooth_button">Bluetooth Activity</string>
    <string name="google_chart_button">Google Chart Activity</string>
    <string name="pulse_button">Pulse Oximeter</string>

    <string name="submit">Submit</string>
    <string name="button_send">Send</string>
    <string name="button_back">Go back</string>

    <!--  NetworkActivity  -->
    <string name="seconds_hint">Enter the seconds between pings</string>
    <string name="button_start_network">Start Network</string>

    <!--  NavBarFragment  -->
    <string name="next">Next</string>
    <string name="back">Back</string>

    <!--  QuestionFragment  -->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Bluetooth  -->
    <string name="app_registration">App Registration</string>
    <string name="bluetooth_not_available">Bluetooth is not available</string>
    <string name="bluetooth_health_profile_not_available">Bluetooth health profile is not available</string>
    <string name="channel_connection">Channel Connection</string>
    <string name="channel_connection_desc">(some devices automatically initiate connection)</string>
    <string name="connect">Connect</string>
    <string name="connected">CONNECTED</string>
    <string name="connection_state">Connection State</string>
    <string name="data_ind">Data Indicator</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="empty"> </string>
    <string name="none">None...</string>
    <string name="ok">Okay</string>
    <string name="read_data">Reading data&#8230;</string>
    <string name="read_data_done">Done with reading data&#8230;</string>
    <string name="register">Register</string>
    <string name="select_device">Select a device</string>
    <string name="status_create_channel">Create channel status: %d</string>
    <string name="status_destroy_channel">Destroy channel status: %d</string>
    <string name="status_msg">Status Message</string>
    <string name="status_reg">App registration status: %d</string>
    <string name="status_unreg">App 	 status: %d</string>
    <string name="unregister">Unregister</string>
    <string name="sp02">Sp02: </string>
    <string name="heart_rate">HR: </string>
    <string name="zero">0</string>
    <string name="desc">Light Indicator</string>
    <string name="version">Version: </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_two">TwoActivity</string>
    <string name="title_activity_kiosk">KioskActivity</string>
</resources>
