<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.valdeslab.learningapp.NavigationActivity">

    <Button
        android:id="@+id/basic_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basic_activity"/>

    <Button
        android:id="@+id/fragment_data_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_data_movement"/>

    <Button
        android:id="@+id/recycler_view_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recycler_view"/>

    <Button
        android:id="@+id/data_chart_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_charts"/>

</LinearLayout>
