<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.valdeslab.learningapp.DataMovement.FirstNameFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_one"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/textview_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edittext_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textview_enter_text_here"/>

    <Button
        android:id="@+id/button_frag_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send"/>

</LinearLayout>
