<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.valdeslab.learningapp.Kiosk.QuestionFragment">

    <TextView
        android:id="@+id/textview_question"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="35sp"
        android:text="@string/hello_blank_fragment" />

    <RadioGroup
        android:id="@+id/question_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"/>

        <RadioButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"/>

    </RadioGroup>

</LinearLayout>
